added card stying

--- a/apps/toolsy/src/index.html
+++ b/apps/toolsy/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <toolsy-workspace-root></toolsy-workspace-root>
+    <toolsy-root></toolsy-root>
   </body>
 </html>
